Add exceptions to blank search and invalid symbols to search

--- a/app/views/users/my_portfolio.html.erb
+++ b/app/views/users/my_portfolio.html.erb
@@ -18,7 +18,7 @@
 
 
 <% if @stock %>
-    <div class="card card-header result-block">
+    <div class="card card-header result-block col-sm-6">
         <strong>Symbol:</strong> <%= @stock.ticker %>
         <strong>Company name:</strong> <%= @stock.name %>
         <strong>Last price:</strong> <%= @stock.last_price %>
