--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,13 +1,13 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
-    <%= link_to 'Navbar', root_path, class: "navbar-brand" %>
+    <%= link_to 'Finance Tracker', root_path, class: "navbar-brand" %>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-
+    <% if current_user %>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
+        <li class="nav-item <%= 'active' if request.path == my_portfolio_path %> ">
           <%= link_to 'Portfolio',my_portfolio_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
@@ -27,11 +27,15 @@
         <li class="nav-item">
           <a class="nav-link disabled" href="#">Disabled</a>
         </li>
+
       </ul>
       <form class="form-inline my-2 my-lg-0">
+        
+          <%= link_to 'Log Out', destroy_user_session_path, class: 'btn btn-outline-danger my-2 my-sm-0 mr-2', method: :delete %>
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form>
     </div>
+    <% end %>
   </div>
 </nav>
