--- a/app/views/users/_result.html.erb
+++ b/app/views/users/_result.html.erb
@@ -1,9 +1,11 @@
 <%=  render 'layouts/messages'  %>
 
 <% if @stock %>
-    <div class="card card-header result-block col-sm-6">
+    <div class="card card-header result-block col-sm-9">
         <strong>Symbol:</strong> <%= @stock.ticker %>
         <strong>Company name:</strong> <%= @stock.name %>
         <strong>Last price:</strong> <%= @stock.last_price %>
+        <%= link_to 'Add to portfolio', user_stocks_path(user: current_user, ticker: @stock.ticker),
+                                    class: "btn btn-xs btn-success ml-4", method: :post %>
     </div>
 <% end %>
