--- a/app/views/users/_result.html.erb
+++ b/app/views/users/_result.html.erb
@@ -5,7 +5,23 @@
         <strong>Symbol:</strong> <%= @stock.ticker %>
         <strong>Company name:</strong> <%= @stock.name %>
         <strong>Last price:</strong> <%= @stock.last_price %>
-        <%= link_to 'Add to portfolio', user_stocks_path(user: current_user, ticker: @stock.ticker),
-                                    class: "btn btn-xs btn-success ml-4", method: :post %>
+
+        <% if current_user.can_track_stock?(@stock.ticker) %>
+            <%= link_to 'Add to portfolio', user_stocks_path(user: current_user, ticker: @stock.ticker),
+                                            class: "btn btn-xs btn-success ml-4", method: :post %>
+        <% else %>
+            <span class="badge badge-secondary ml-4">
+                You are already tracking 
+                <% if !current_user.under_stock_limit? %>
+                    10 stocks
+                <% else %>
+                    this stock
+                <% end %>
+
+
+            </span>
+        <% end %>
+        
+        
     </div>
 <% end %>
