--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -27,11 +27,16 @@
         <li class="nav-item">
           <a class="nav-link disabled" href="#">Disabled</a>
         </li>
-
+      </ul>
+      <ul class="navbar-nav ml-auto">
+        <li id="name-navbar" class="nav-item badge badge-secondary mr-2 center-block">
+          <%= fa_icon 'user' %> <%= current_user.full_name %>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Log Out', destroy_user_session_path, class: 'btn btn-outline-danger my-2 my-sm-0 mr-2', method: :delete %>
+        </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
-        
-          <%= link_to 'Log Out', destroy_user_session_path, class: 'btn btn-outline-danger my-2 my-sm-0 mr-2', method: :delete %>
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form>
