--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -25,7 +25,9 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
+          <%= link_to edit_user_registration_path , class: "nav-link" do %>
+            <%= fa_icon 'edit' %> Edit profile
+          <% end %>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto">
