Add Stop following option from my_friends

--- a/app/views/friends/_list.html.erb
+++ b/app/views/friends/_list.html.erb
@@ -15,7 +15,7 @@
             <td><%= friend.last_name %> </td>
             <td><%= friend.email %> </td>
             <td><%= friend.stocks.count %></td>
-            <td><%= link_to 'Stop following', '#', method: :delete, data: {confirm: "Are you sure"}, class: "btn btn-sm btn-warning col-sm" %></td>
+            <td><%= link_to 'Stop following', friendship_path(friend), method: :delete, data: {confirm: "Are you sure"}, class: "btn btn-sm btn-warning col-sm" %></td>
             </tr>
         <% end %>
     </tbody>
