--- a/app/views/users/my_friends.html.erb
+++ b/app/views/users/my_friends.html.erb
@@ -2,13 +2,10 @@
     <h3>Search friend:</h3 >
     <%= form_tag search_friend_path, remote: true, method: :get do %>
         <div class="form-group row">
-            <div class="col-sm-5 no-right-pagging">
-                <%= text_field_tag :first_name, params[:first_name], autofocus:true, class: "form-control form-control-lg", placeholder: "First name" %>
+            <div class="col-sm-9 no-right-pagging">
+                <%= text_field_tag :friend, params[:friend], autofocus:true, class: "form-control form-control-lg", placeholder: "Name or email" %>
             </div>
-            <div class="col-sm-5 no-right-pagging">
-                <%= text_field_tag :last_name, params[:last_name], autofocus:true, class: "form-control form-control-lg", placeholder: "Last name" %>
-            </div>
-            <div class="col-sm-2 no-left-padding">
+            <div class="col-sm-2 no-left-padding ml-4">
                 <%= button_tag type: :submit, class: "btn btn-success" do %>
                     <%= fa_icon 'search 2x' %>
                 <% end %>
