--- a/app/views/users/_friend_result.html.erb
+++ b/app/views/users/_friend_result.html.erb
@@ -7,7 +7,7 @@
         <strong class="col-sm">Email: </strong> <%= friend.email %>
         <%= link_to 'See profile', '#', class:"btn btn-sm btn-success" %>
         <% if current_user.are_friends?(friend.id) %>
-            <%= link_to 'Follow friend', '#',class: "btn btn-sm btn-success ml-4", method: :post %>
+            <%= link_to 'Follow friend', friendships_path(friend: friend), class: "btn btn-sm btn-success ml-4", method: :post %>
         <% else %>
             <span class="badge badge-secondary"> You already follow this friend</span>
         <% end %>
