--- a/app/views/users/_friend_result.html.erb
+++ b/app/views/users/_friend_result.html.erb
@@ -5,7 +5,7 @@
     <div class="ard card-header result-block col-sm-12 mt-2">
         <strong class="col-sm">Name: </strong> <%= friend.full_name %>
         <strong class="col-sm">Email: </strong> <%= friend.email %>
-        <%= link_to 'See profile', '#', class:"btn btn-sm btn-success" %>
+        <%= link_to 'See profile', user_path(friend.id), class:"btn btn-sm btn-success" %>
         <% if current_user.are_friends?(friend.id) %>
             <%= link_to 'Follow friend', friendships_path(friend: friend), class: "btn btn-sm btn-success ml-4", method: :post %>
         <% else %>
